--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "ts-jest": "^26.1.3",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
+  },
+  "dependencies": {
+    "lodash": "^4.17.20"
   }
 }
